 - Split the Resource class to separate a new org.restlet.Handler class exposing the lower-level API,
   from the higher-level API of Resource. 
 - Added "available", "modifiable" and "readable" properties to the Resource class.
 - Added "rechallengeEnabled" property to Guard (true by default) to repeatedly challenge the client upon 
   reception of invalid credentials instead of forbidding the access like before. This conforms more 
   closely to the HTTP 1.1 specifications while leaving the door open for the stricter behavior. 
   Reported by Stephan Koops.
 - Refactored the implementation of dispatchers to derive from a base TemplateDispatcher class.
 - Added the "internalRouter" property to Component to attach internal/private Restlets, accessible via 
   the built-in RIAP client (Restlet Internal Access Protocol). Suggested by Marc Portier.
 - Updated the Protocol and LocalReference classes with support for the new RIAP scheme.
 - In order to facilitate the implementation of your custom Finder, an new createTarget() method taking
   a Resource class in parameter. 
 - The context dispatchers automatically update the identifier property of response entities when they 
   are empty, based on the request's target URI.

[Misc]
 - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
 - Removed Jetty 5 connector from the code base. Jetty 6 connector is stable enough now.
 - Added Response.locationRef property as a replacement for the Response.redirectRef
   property that is now deprecated. Suggested by Michael Vogel and Avi Flax.
 - Updated projects to Eclipse 3.3. Minor adjustments required.
 - The ConverterService and all related methods on Message are deprecated, with no replacement as it 
   doesn't fit well with content negotiation. Most users prefer to handle those conversion in Resource
   subclasses. Suggested by Justin Makeig, Rob Heittman, Sumit Lohia.
 
 